Initial commit with Dockerfile

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,7 @@
 {
   "projects": {
-    "default": "liftelevator-4e719"
-  }
+    "default": "liftelevator-4e719-e69f3"
+  },
+  "targets": {},
+  "etags": {}
 }
